--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Testcafe introduction",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test-all-chrome": "testcafe chrome ./page_model/tests",
+    "test-check-browsers": "testcafe ---list-browsers"
   },
   "repository": {
     "type": "git",
